// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChannelInputs > Render > renders correctly in HSL mode 1`] = `
<div
  class="flex items-start justify-center gap-3"
  data-testid="ChannelInputs"
>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Hue"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="210"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        °
      </span>
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      H
    </span>
  </div>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Saturation"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="100"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      S
    </span>
  </div>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Lightness"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="43"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      L
    </span>
  </div>
</div>
`;

exports[`ChannelInputs > Render > renders correctly in OKLCH mode 1`] = `
<div
  class="flex items-start justify-center gap-3"
  data-testid="ChannelInputs"
>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Lightness"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="54.0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      L
    </span>
  </div>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Chroma"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="0.194"
      />
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      C
    </span>
  </div>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Hue"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="250.0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        °
      </span>
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      H
    </span>
  </div>
</div>
`;

exports[`ChannelInputs > Render > renders correctly in RGB mode 1`] = `
<div
  class="flex items-start justify-center gap-3"
  data-testid="ChannelInputs"
>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Red"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="0"
      />
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      R
    </span>
  </div>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Green"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="110"
      />
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      G
    </span>
  </div>
  <div
    class="flex flex-col items-center gap-1"
  >
    <div
      class="flex items-center justify-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Blue"
        class="bg-black/10 dark:bg-white/10 text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5 w-full text-center"
        type="text"
        value="217"
      />
    </div>
    <span
      class="text-xs text-neutral-500 dark:text-neutral-400 leading-none"
    >
      B
    </span>
  </div>
</div>
`;
